Added whatsapp htmls
Created 3 pages: Texting, Audio call, Video call.
they all still need UI work.

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,5 +4,6 @@
   "singleQuote": false,
   "tabWidth": 2,
   "trailingComma": "none",
-  "useTabs": false
+  "useTabs": false,
+  "endOfLine":"auto"
 }
